# Physics-Informed-Neural-Networks-in-Quantitative-Finance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: dissertation.yaml
notebooks/: 0_eda.ipynb  0b_feature_screening.ipynb  10_final_dm_test.ipynb  3_bilstm_analysis.ipynb
src/: __init__.py  constants.py
src/artefacts/: __init__.py  orchestration.py  plotting.py
src/data/: __init__.py  dataset.py  features.py  fetcher.py  pipeline.py  splitter.py
src/evaluation/: __init__.py  backtester.py  benchmarks.py  comparison.py  evaluator.py  forecast_tests.py  metrics.py  volatility.py
src/losses/: __init__.py  composite.py  data_losses.py  physics.py
src/models/: __init__.py  base_pinn.py  baselines.py  classical.py  hawkes_decoupled_pinn.py  pinn.py  registry.py  residual_pinn.py  stacked_pinn.py
src/training/: __init__.py  config.py  result.py  runner.py  scheduler.py  trainer.py  walk_forward.py
src/utils/: __init__.py  logger.py  (+1 more)
tests/: conftest.py  test_artefacts.py  test_backtester.py  test_benchmarks.py  test_best_epoch_data_only.py  test_comparison.py  test_compute_all_metrics.py  test_evaluate_on_test.py  test_evaluation_public_api.py  test_financial_metrics.py  test_financial_metrics_depend_on_predictions.py  test_forecast_tests.py  test_garch_volatility.py  test_models_phase2.py  test_physics_losses.py  test_physics_scheduler.py  test_plot_comparison.py  test_prediction_metrics.py  test_runner.py  test_trainer.py  test_training_config.py  test_training_result.py  test_training_smoke.py  test_volatility.py
(+13 files in other folders)
